# atlas-agentic-research

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/agents/: backend-engineer.md  debugger.md  frontend-engineer.md  infra-engineer.md  observability-engineer.md  orchestration-engineer.md  rag-engineer.md  tester.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-28T08-18-41-409Z.yml  page-2026-06-28T08-18-58-565Z.yml  page-2026-06-28T08-19-36-201Z.yml
apps/api/: .coverage  .env.example  Dockerfile  pyproject.toml
apps/api/atlas/: __init__.py  config.py  llm.py  main.py  observability.py  paths.py
apps/api/atlas/core/: __init__.py  graph.py  guardrails.py  state.py
apps/api/atlas/core/agents/: __init__.py  base.py  debate.py  specialists.py  synthesizer.py
apps/api/atlas/core/llmops/: __init__.py  agent_eval.py  evaluate.py  gate.py  optimizer.py  registry.py
apps/api/atlas/core/memory/: __init__.py  episodic.py  procedural.py  summarizer.py
apps/api/atlas/core/rag/: __init__.py  chunking.py  crag.py  embeddings.py  index.py  ingest.py  types.py  web_evidence.py
apps/api/atlas/core/rag/loaders/: __init__.py  files.py  sec_edgar.py
apps/api/atlas/core/tools/: __init__.py  market.py  sec.py  web_search.py
apps/api/atlas/eval/: __init__.py  golden.py  langfuse_scores.py  ragas_eval.py  retrieval_eval.py
apps/api/atlas/routers/: corpus.py  health.py  llmops.py  research.py
apps/api/tests/: conftest.py  test_agent_eval.py  test_corpus_router.py  test_edge_cases.py  test_eval_and_units.py  test_graph.py  test_health.py  test_llmops.py  test_memory.py  test_rag.py  test_web_fallback.py
apps/web/: Dockerfile  package-lock.json
data/corpus/: aster_dynamics_profile.md  helios_10k_fy2025.md  helios_news_2026q1.md
data/playbooks/: fundamentals.md  market.md  news_sentiment.md  risk.md
docs/: architecture.md  deployment.md
(+19 files in other folders)
