[project]
name = "atlas-api"
version = "0.1.0"
description = "Atlas — Autonomous Due-Diligence Desk (multi-agent research backend)"
requires-python = ">=3.11"

dependencies = [
    # --- web / server ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # httpx<0.28: groq 0.11 passes `proxies=` which 0.28 removed (keeps ChatGroq working)
    "httpx>=0.27,<0.28",
    # starlette/sse-starlette pinned to fastapi 0.111's range (sse-starlette 3.x needs starlette 1.x)
    "starlette>=0.37,<0.38",
    "sse-starlette>=2.1,<3",

    # --- LLM / orchestration (pinned to the LangChain v0.3 line) ---
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-groq>=0.2,<0.3",
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint-sqlite>=2.0",

    # --- observability ---
    "langfuse>=2.50,<3",

    # --- RAG (LangChain hybrid: BM25Retriever + EnsembleRetriever + CrossEncoderReranker) ---
    "langchain-huggingface>=0.1.2,<0.2",
    "langchain-qdrant>=0.1.4,<0.3",
    "qdrant-client>=1.12",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3",

    # --- tools (wired in M3) ---
    "mcp>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# asyncio_mode is re-added with pytest-asyncio once we have async-native tests.
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]
